--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest --watch",
     "cypress": "cypress open",
     "cypress:headless": "cypress run",
     "e2e": "start-server-and-test dev http://localhost:3000 cypress",
@@ -15,11 +16,16 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "cypress": "10.3.1",
+    "jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.0.3",
     "start-server-and-test": "1.14.0",
+    "ts-jest": "^29.0.1",
     "typescript": "4.7.4"
   }
 }
