--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless"
   },
   "dependencies": {
+    "daisyui": "^2.28.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -21,10 +22,13 @@
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.11",
     "cypress": "10.3.1",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
+    "postcss": "^8.4.16",
     "start-server-and-test": "1.14.0",
+    "tailwindcss": "^3.1.8",
     "ts-jest": "^29.0.1",
     "typescript": "4.7.4"
   }
